# reqwest_h2_hang_repro

./: .gitignore  Cargo.toml  Makefile  README.md  nginx.conf  shell.nix
src/: main.rs
