[package]
name = "reqwest_h2_hang_repro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = [ "native-tls-alpn" ] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.2"
env_logger = "0.9"
tracing = { version = "0.1", features = [ "log" ] }
